Fix login/register flow

--- a/admin/src/main/ui/src/app/components/alert.component.html
+++ b/admin/src/main/ui/src/app/components/alert.component.html
@@ -22,4 +22,13 @@
       <button class="btn btn-primary" (click)="errorModal.close()">close</button>
     </modal-footer>
   </modal>
+  <modal #compModal
+         [hideCloseButton]="true"
+         [closeOnEscape]="false"
+         [closeOnOutsideClick]="false">
+    <modal-content>
+      <div style="text-align: center" #compModalContainer>
+      </div>
+    </modal-content>
+  </modal>
 </div>
