--- a/admin/src/main/ui/src/app/components/alert.component.html
+++ b/admin/src/main/ui/src/app/components/alert.component.html
@@ -19,7 +19,7 @@
       {{error}}
     </modal-content>
     <modal-footer>
-      <button class="btn btn-primary" (click)="errorModal.close()">close</button>
+      <button class="btn btn-primary" (click)="closeAlert()">close</button>
     </modal-footer>
   </modal>
   <modal #compModal
