Add dummy auth-proxy and ingresses for gogs,cloud9 and fns

--- a/admin/src/main/ui/src/app/components/function.component.html
+++ b/admin/src/main/ui/src/app/components/function.component.html
@@ -1,12 +1,5 @@
 <div *ngIf="function">
   <h3>Function {{function.name}}</h3>
-  <p>Gogs link:
-    <a href="{{function.gitUrl.replace('.git', '')}}"
-       target="_blank">{{function.gitUrl.replace('.git', '')}}</a>
-  </p>
-  <p>
-    Note: if you are not logged in to gogs, the link will show a 404 - not found page.
-  </p>
   <hr/>
   <div>
     <h4>Versions</h4>
@@ -24,13 +17,9 @@
   <hr/>
   <div *ngIf="service">
     <h4>Try it</h4>
-    Address: {{address()}}
-    <p *ngIf="service.spec.ports[0].nodePort">
-      This function is available outside the cluster at [node IP or name]:{{service.spec.ports[0].nodePort}}
-    </p>
     <div>
       <textarea [(ngModel)]="payload" class="form-control"></textarea>
-      <button (click)="run(address(), payload)">Run</button>
+      <button class="btn btn-primary" (click)="run(address(), payload)">Run</button>
     </div>
     <p>Output: {{output}}</p>
   </div>
