--- a/admin/src/main/ui/src/app/components/create-function.component.html
+++ b/admin/src/main/ui/src/app/components/create-function.component.html
@@ -8,43 +8,14 @@
       </div>
     </div>
     <fieldset class="form-group row">
-      <legend class="col-form-legend col-sm-2">Service type</legend>
+      <legend class="col-form-legend col-sm-2">Function type</legend>
       <div class="col-sm-10">
         <div class="form-check">
-          <label class="form-check-label">
-            <input [(ngModel)]="serviceType" class="form-check-input" type="radio" name="serviceType" value="ClusterIP"
-                   checked>
-            ClusterIP
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input [(ngModel)]="serviceType" class="form-check-input" type="radio" name="serviceType" value="NodePort">
-            NodePort
-          </label>
-        </div>
-      </div>
-    </fieldset>
-    <div class="form-group row">
-      <label class="col-sm-2">Ingress</label>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <label class="form-check-label">
-            <input [(ngModel)]="ingress" name="ingress" class="form-check-input" type="checkbox"> Create Ingress?
-          </label>
-        </div>
-      </div>
-    </div>
-    <fieldset class="form-group row" *ngIf="ingress">
-      <legend class="col-form-legend col-sm-2">Ingress options</legend>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <label class="form-check-label">Host</label>
-          <input [(ngModel)]="host" class="form-control" name="host">
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">Path</label>
-          <input [(ngModel)]="path" class="form-control" name="path">
+          <label for="function-type" class="col-sm-2 col-form-label">Name</label>
+          <select [(ngModel)]="type" name="type" class="form-check-input" id="function-type">
+            <option value="generic">Generic</option>
+            <option value="nodejs">Nodejs</option>
+          </select>
         </div>
       </div>
     </fieldset>
