--- a/admin/src/main/ui/src/app/components/create-function.component.html
+++ b/admin/src/main/ui/src/app/components/create-function.component.html
@@ -15,6 +15,7 @@
           <select [(ngModel)]="type" name="type" class="form-check-input" id="function-type">
             <option value="generic">Generic</option>
             <option value="nodejs">Nodejs</option>
+            <option value="static_site">Static site</option>
           </select>
         </div>
       </div>
